<resources>
    <string name="app_name">AllSongsDemo</string>
    <string name="title">All Songs</string>
    <string name="shuffle_btn_text">SHUFFLE PLAY</string>

    <!-- for contentDescription of ImageView -->
    <string name="back">back button</string>
    <string name="shuffle">shuffle playing button</string>
    <string name="download">download button</string>
    <string name="folder">select button</string>
    <string name="cover">cover of sing</string>
    <string name="more">more button</string>

    <string name="song_name">song name</string>
    <string name="explicit">EXPLICIT</string>
    <string name="singer_name">singer_name</string>

    <string name="music">Music</string>
    <string name="love">For you</string>
    <string name="search">Search</string>
    <string name="podcast">Podcast</string>
    <string name="me">Me</string>

</resources>