<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_titile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_left_arrow"
            android:contentDescription="@string/back"/>

        <TextView
            android:text="@string/title"
            style="@style/title_style"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintStart_toStartOf="@id/ll_title"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <FrameLayout
            android:id="@+id/btn_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuffle_btn_text"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24.5dp"
                style="@style/tv_shuffle_style"
                app:drawableStartCompat="@drawable/ic_shuffle"
                android:drawablePadding="7.33dp"/>

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_download"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_folder"
                android:layout_marginEnd="26dp"
                android:contentDescription="@string/download"/>

            <ImageView
                android:id="@+id/btn_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/folder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_folder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="9dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout
        android:id="@+id/ll_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <TextView
            android:text="@string/music"
            style="@style/tv_nav_style"
            android:alpha="0.45"
            app:drawableTopCompat="@drawable/ic_music"/>
        <TextView
            android:text="@string/love"
            style="@style/tv_nav_style"
            app:drawableTopCompat="@drawable/ic_love"/>
        <TextView
            android:text="@string/search"
            style="@style/tv_nav_style"
            android:alpha="0.45"
            app:drawableTopCompat="@drawable/ic_search"/>
        <TextView
            android:text="@string/podcast"
            style="@style/tv_nav_style"
            android:alpha="0.45"
            app:drawableTopCompat="@drawable/ic_pod"/>
        <TextView
            android:text="@string/me"
            style="@style/tv_nav_style"
            android:alpha="0.45"
            app:drawableTopCompat="@drawable/ic_me"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
