<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="song"
            type="com.example.allsongsdemo.Song" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="28dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cover"
            android:src="@drawable/ic_song"
            app:imageUrl="@{song.imgSrcUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/iv_cover"
            app:layout_constraintStart_toEndOf="@id/iv_cover"
            app:layout_constraintTop_toTopOf="@id/iv_cover">

            <TextView
                android:id="@+id/tv_song_name"
                style="@style/tv_song_name_style"
                android:text="@{song.name}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_explicit_style"
                    android:background="@drawable/ic_rectangle"
                    android:visibility="@{song.rental ? View.VISIBLE : View.GONE}"
                    android:text="@string/explicit"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/tv_singer"
                    style="@style/tv_singer_name_style"
                    android:text="@{song.singer}" />

            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>